--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Bad+Script&family=Inconsolata:wght@200..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bad+Script&family=Dancing+Script:wght@400..700&family=Inconsolata:wght@200..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bad+Script&family=Dancing+Script:wght@400..700&family=Inconsolata:wght@200..900&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
+@layer base {
+  .navbar a {
+    @apply ml-8;
+  }
+
+  .navbar a:hover {
+    @apply text-amber-700 border-b-2 pb-1;
+  }
+}
+
+* {
+  margin: 0;
+  font-family: "Inconsolata";
+}
