--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,10 @@ body {
   width: 416px;
 }
 
+.icon-details:hover .icon-thumbnail {
+  background-color: rgb(237, 240, 244);
+}
+
 .icon-details:hover h2 {
   color: rgb(217 119 6);
   transition: ease-in-out color 0.1s;
@@ -43,5 +47,9 @@ body {
 .icon-details:hover .icon {
   font-size: 6rem;
   margin: 3.25rem;
-  color: rgb(217, 119, 6, 0.8);
+  color: rgb(217, 119, 6, 0.9);
+}
+
+.icon-details:hover .icon-description {
+  color: rgb(2 6 23);
 }
